--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "popper.js": "1.12.3"
   },
   "devDependencies": {
-    "@types/d3": "4.10.0",
     "@types/bootstrap": "3.3.35",
+    "@types/d3": "4.10.0",
     "@types/jquery": "3.2.11",
     "@types/node": "8.0.24",
     "@types/popper.js": "1.10.0",
@@ -62,6 +62,7 @@
     "preprocess-loader": "0.2.2",
     "resolve-url-loader": "2.1.0",
     "sass-loader": "6.0.6",
+    "sass-resources-loader": "1.3.0",
     "source-map-loader": "0.2.1",
     "style-loader": "0.18.2",
     "stylelint": "8.0.0",
