--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "tslint": "5.6.0",
     "tslint-loader": "3.5.3",
     "typescript": "2.4.2",
+    "typings-for-css-modules-loader": "1.5.0",
     "url-loader": "0.5.9",
     "webpack": "3.5.5",
     "webpack-dev-server": "2.7.1",
