--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Demo",
   "short_name": "Demo",
-  "description": "Demo illustrating angular structure",
+  "description": "Demo illustrating d3 starter kit",
   "background_color": "white",
   "dir": "auto",
   "display": "standalone",
