--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "css-loader": "0.28.5",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
+    "hard-source-webpack-plugin": "0.4.9",
     "html-loader": "0.5.1",
     "html-webpack-plugin": "2.30.1",
     "node-sass": "4.5.3",
@@ -67,6 +68,7 @@
     "stylelint": "8.0.0",
     "stylelint-config-standard": "17.0.0",
     "stylelint-webpack-plugin": "0.9.0",
+    "sw-precache-webpack-plugin": "0.11.4",
     "tslint": "5.6.0",
     "tslint-loader": "3.5.3",
     "typescript": "2.4.2",
@@ -74,6 +76,7 @@
     "url-loader": "0.5.9",
     "webpack": "3.5.5",
     "webpack-dev-server": "2.7.1",
+    "webpack-manifest-plugin": "1.3.1",
     "webpack-merge": "4.1.0"
   }
 }
