--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "d3": "4.10.0",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
-    "popper.js": "1.12.3"
+    "popper.js": "1.12.3",
+    "roboto-fontface": "0.8.0"
   },
   "devDependencies": {
     "@types/bootstrap": "3.3.36",
