--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "d3": "4.10.0",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
-    "popper.js": "1.12.3",
+    "popper.js": "1.12.4",
     "roboto-fontface": "0.8.0"
   },
   "devDependencies": {
@@ -47,15 +47,16 @@
     "@types/jquery": "3.2.12",
     "@types/node": "8.0.25",
     "@types/popper.js": "1.10.0",
-    "awesome-typescript-loader": "3.2.3",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-preset-env": "1.6.0",
+    "cache-loader": "1.0.3",
     "clean-webpack-plugin": "0.1.16",
     "copy-webpack-plugin": "4.0.1",
     "css-loader": "0.28.5",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
+    "fork-ts-checker-webpack-plugin": "0.2.7",
     "html-loader": "0.5.1",
     "html-webpack-plugin": "2.30.1",
     "node-sass": "4.5.3",
@@ -69,6 +70,8 @@
     "stylelint-config-standard": "17.0.0",
     "stylelint-webpack-plugin": "0.9.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "thread-loader": "1.1.1",
+    "ts-loader": "2.3.4",
     "tslint": "5.7.0",
     "tslint-loader": "3.5.3",
     "typescript": "2.4.2",
