--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "d3": "4.10.0",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
-    "popper.js": "1.12.4",
+    "popper.js": "1.12.5",
     "roboto-fontface": "0.8.0"
   },
   "devDependencies": {
     "@types/bootstrap": "3.3.36",
     "@types/d3": "4.10.0",
     "@types/jquery": "3.2.12",
-    "@types/node": "8.0.25",
+    "@types/node": "8.0.26",
     "@types/popper.js": "1.10.0",
     "awesome-typescript-loader": "3.2.3",
     "babel-core": "6.26.0",
@@ -53,7 +53,8 @@
     "babel-preset-env": "1.6.0",
     "clean-webpack-plugin": "0.1.16",
     "copy-webpack-plugin": "4.0.1",
-    "css-loader": "0.28.5",
+    "css-loader": "0.28.7",
+    "expose-loader": "0.7.3",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
     "html-loader": "0.5.1",
@@ -71,7 +72,7 @@
     "sw-precache-webpack-plugin": "0.11.4",
     "tslint": "5.7.0",
     "tslint-loader": "3.5.3",
-    "typescript": "2.4.2",
+    "typescript": "2.5.2",
     "typings-for-css-modules-loader": "1.5.0",
     "url-loader": "0.5.9",
     "webpack": "3.5.5",
