--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,16 @@
 {
   "compilerOptions": {
-    "allowJs": true,
-    "allowUnreachableCode": true,
-    "diagnostics": false,
+    "allowJs": false,
+    "checkJs": false,
+    "diagnostics": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "module": "CommonJS",
     "moduleResolution": "Node",
-    "noEmitOnError": false,
-    "noFallthroughCasesInSwitch": false,
-    "noImplicitAny": false,
-    "noImplicitReturns": false,
-    "noImplicitThis": false,
     "pretty": true,
     "removeComments": false,
     "sourceMap": true,
+    "strict": true,
     "target": "ES2017",
     "types": [
     ]
