--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/jquery": "3.2.12",
     "@types/node": "8.0.28",
     "@types/popper.js": "1.10.0",
+    "awesome-typescript-loader": "3.2.3",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-preset-env": "1.6.0",
@@ -74,6 +75,7 @@
     "thread-loader": "1.1.1",
     "ts-loader": "2.3.7",
     "tslint": "5.7.0",
+    "tslint-loader": "3.5.3",
     "typescript": "2.5.2",
     "typings-for-css-modules-loader": "1.5.0",
     "url-loader": "0.5.9",
