--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
     "npm": ">=5.5.1"
   },
   "scripts": {
+    "postinstall": "node mock-server/db-creator.js",
     "build": "webpack --profile --colors --env.name=prod",
-    "serve": "webpack-dev-server --d --profile --colors --env.name=dev"
+    "serve": "webpack-dev-server --d --profile --colors --env.name=dev | json-server --watch mock-server/db.json --port 5000"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mauriziocescon"
+    "url": "https://github.com/mauriziocescon/react-app"
   },
   "keywords": [
+    "d3",
+    "bootstrap",
     "cescon",
     "es2017",
     "maurizio",
     "sass",
     "typescript",
     "vendor",
-    "webpack"
+    "webpack",
+    "json-server"
   ],
   "licenses": [
     {
@@ -38,16 +42,16 @@
     "d3": "4.11.0",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
-    "popper.js": "1.12.6",
+    "popper.js": "1.12.7",
     "roboto-fontface": "0.8.0"
   },
   "devDependencies": {
     "@types/bootstrap": "3.3.36",
-    "@types/d3": "4.11.0",
-    "@types/jquery": "3.2.15",
-    "@types/node": "8.0.47",
+    "@types/d3": "4.11.1",
+    "@types/faker": "4.1.1",
+    "@types/jquery": "3.2.16",
+    "@types/node": "8.0.51",
     "@types/popper.js": "1.11.0",
-    "awesome-typescript-loader": "3.2.3",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-preset-env": "1.6.1",
@@ -57,13 +61,15 @@
     "css-loader": "0.28.7",
     "expose-loader": "0.7.3",
     "extract-text-webpack-plugin": "3.0.2",
+    "faker": "4.1.0",
     "file-loader": "1.1.5",
     "fork-ts-checker-webpack-plugin": "0.2.8",
     "html-loader": "0.5.1",
     "html-webpack-plugin": "2.30.1",
-    "node-sass": "4.5.3",
+    "json-server": "0.12.1",
+    "node-sass": "4.6.1",
     "preprocess-loader": "0.2.2",
-    "resolve-url-loader": "2.1.1",
+    "resolve-url-loader": "2.2.0",
     "sass-loader": "6.0.6",
     "sass-resources-loader": "1.3.1",
     "source-map-loader": "0.2.3",
@@ -73,15 +79,15 @@
     "stylelint-webpack-plugin": "0.9.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "thread-loader": "1.1.2",
-    "ts-loader": "3.1.0",
+    "ts-loader": "3.1.1",
     "tslint": "5.8.0",
     "tslint-loader": "3.5.3",
-    "typescript": "2.5.3",
+    "typescript": "2.6.1",
     "typings-for-css-modules-loader": "1.7.0",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.3",
+    "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "webpack-merge": "4.1.0"
+    "webpack-merge": "4.1.1"
   }
 }
