--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "npm": ">=5.5.1"
   },
   "scripts": {
-    "postinstall": "node mock-server/db-creator.js",
+    "postinstall": "node ./mock-server/db-creator.js",
+    "json-server": "nodemon ./mock-server/server.js",
     "build": "webpack --profile --colors --env.name=prod",
-    "serve": "webpack-dev-server --d --profile --colors --env.name=dev | json-server --watch mock-server/db.json --port 5000"
+    "serve": "webpack-dev-server --d --profile --colors --env.name=dev | npm run json-server"
   },
   "repository": {
     "type": "git",
@@ -68,6 +69,7 @@
     "html-webpack-plugin": "2.30.1",
     "json-server": "0.12.1",
     "node-sass": "4.6.1",
+    "nodemon": "1.12.1",
     "preprocess-loader": "0.2.2",
     "resolve-url-loader": "2.2.0",
     "sass-loader": "6.0.6",
