--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "d3-starter-kit",
+  "name": "d3-app",
   "version": "1.0.0",
   "description": "Starter Kit for a d3 application",
   "author": "Maurizio Cescon <maurizio.cescon@gmail.com>",
