--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "postinstall": "node ./mock-server/db-creator.js",
     "json-server": "nodemon ./mock-server/server.js",
     "build": "webpack --profile --colors --env.name=prod",
-    "serve": "webpack-dev-server --d --profile --colors --env.name=dev | npm run json-server"
+    "serve": "webpack-dev-server --d --profile --colors --env.name=dev | npm run json-server",
+    "test": "jest src"
   },
   "repository": {
     "type": "git",
@@ -45,15 +46,17 @@
     "d3": "4.11.0",
     "font-awesome": "4.7.0",
     "jquery": "3.2.1",
-    "popper.js": "1.12.7",
+    "popper.js": "1.12.8",
     "roboto-fontface": "0.8.0"
   },
   "devDependencies": {
     "@types/bootstrap": "3.3.36",
     "@types/d3": "4.11.1",
-    "@types/faker": "4.1.1",
+    "@types/faker": "4.1.2",
+    "@types/jasmine": "2.8.0",
+    "@types/jest": "21.1.6",
     "@types/jquery": "3.2.16",
-    "@types/node": "8.0.51",
+    "@types/node": "8.0.52",
     "@types/popper.js": "1.11.0",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
@@ -69,6 +72,7 @@
     "fork-ts-checker-webpack-plugin": "0.2.8",
     "html-loader": "0.5.1",
     "html-webpack-plugin": "2.30.1",
+    "jest": "21.2.1",
     "json-server": "0.12.1",
     "node-sass": "4.6.1",
     "nodemon": "1.12.1",
@@ -83,6 +87,7 @@
     "stylelint-webpack-plugin": "0.9.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "thread-loader": "1.1.2",
+    "ts-jest": "21.2.2",
     "ts-loader": "3.1.1",
     "tslint": "5.8.0",
     "tslint-loader": "3.5.3",
@@ -93,5 +98,18 @@
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
     "webpack-merge": "4.1.1"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json"
+    ]
   }
 }
