--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "scripts": {
     "postinstall": "node ./mock-server/db-creator.js",
-    "prestart": "npm run build",
-    "start": "npm run json-server",
+    "start": "node ./mock-server/server.js | npm run build",
     "json-server": "nodemon ./mock-server/server.js",
     "serve": "webpack-dev-server --d --progress --profile --colors --env.name=dev | npm run json-server",
     "build": "webpack --progress --profile --colors --env.name=prod",
