--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "scripts": {
     "postinstall": "node ./mock-server/db-creator.js",
-    "start": "node ./mock-server/server.js | npm run build",
-    "json-server": "nodemon ./mock-server/server.js",
-    "serve": "webpack-dev-server --d --progress --profile --colors --env.name=dev | npm run json-server",
+    "start": "npm run build | npm run json-server",
+    "json-server": "node ./mock-server/server.js",
+    "json-server-watch": "nodemon ./mock-server/server.js",
+    "serve": "webpack-dev-server --d --progress --profile --colors --env.name=dev | npm run json-server-watch",
     "build": "webpack --progress --profile --colors --env.name=prod",
     "test": "jest src"
   },
