--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
   ],
   "dependencies": {
     "babel-polyfill": "6.26.0",
-    "bootstrap": "next",
+    "bootstrap": "4.0.0",
     "d3": "4.12.2",
     "font-awesome": "4.7.0",
-    "jquery": "3.2.1",
+    "jquery": "3.3.1",
     "popper.js": "1.12.9",
     "roboto-fontface": "0.8.0"
   },
@@ -58,26 +58,26 @@
     "@types/d3": "4.12.0",
     "@types/faker": "4.1.2",
     "@types/jest": "22.0.1",
-    "@types/jquery": "3.2.17",
-    "@types/node": "8.5.7",
+    "@types/jquery": "3.2.18",
+    "@types/node": "9.3.0",
     "@types/popper.js": "1.11.0",
     "awesome-typescript-loader": "3.4.1",
     "babel-core": "6.26.0",
-    "babel-jest": "22.0.4",
+    "babel-jest": "22.1.0",
     "babel-preset-env": "1.6.1",
     "clean-webpack-plugin": "0.1.17",
     "copy-webpack-plugin": "4.3.1",
-    "css-loader": "0.28.8",
+    "css-loader": "0.28.9",
     "expose-loader": "0.7.4",
     "extract-text-webpack-plugin": "3.0.2",
     "faker": "4.1.0",
     "file-loader": "1.1.6",
-    "html-loader": "0.5.4",
+    "html-loader": "0.5.5",
     "html-webpack-plugin": "2.30.1",
-    "jest": "22.0.4",
+    "jest": "22.1.4",
     "json-server": "0.12.1",
     "node-sass": "4.7.2",
-    "nodemon": "1.14.8",
+    "nodemon": "1.14.11",
     "resolve-url-loader": "2.2.1",
     "sass-loader": "6.0.6",
     "sass-resources-loader": "1.3.1",
@@ -85,15 +85,15 @@
     "style-loader": "0.19.1",
     "stylelint": "8.4.0",
     "stylelint-config-standard": "18.0.0",
-    "stylelint-webpack-plugin": "0.9.0",
+    "stylelint-webpack-plugin": "0.10.1",
     "sw-precache-webpack-plugin": "0.11.4",
     "ts-jest": "22.0.1",
-    "tslint": "5.8.0",
+    "tslint": "5.9.1",
     "tslint-loader": "3.5.3",
     "typescript": "2.6.2",
     "typings-for-css-modules-loader": "1.7.0",
     "webpack": "3.10.0",
-    "webpack-dev-server": "2.10.0",
+    "webpack-dev-server": "2.11.1",
     "webpack-manifest-plugin": "1.3.2",
     "webpack-merge": "4.1.1"
   },
