--- a/package.json
+++ b/package.json
@@ -54,48 +54,49 @@
     "roboto-fontface": "0.9.0"
   },
   "devDependencies": {
-    "@types/bootstrap": "3.3.37",
+    "@types/bootstrap": "3.3.38",
     "@types/d3": "5.0.0",
     "@types/faker": "4.1.2",
-    "@types/jest": "22.1.2",
+    "@types/jest": "22.1.3",
     "@types/jquery": "3.3.0",
-    "@types/node": "9.4.5",
+    "@types/node": "9.4.6",
     "@types/popper.js": "1.11.0",
-    "awesome-typescript-loader": "3.4.1",
+    "awesome-typescript-loader": "3.5.0",
     "babel-core": "6.26.0",
-    "babel-jest": "22.2.2",
+    "babel-jest": "22.4.1",
     "babel-preset-env": "1.6.1",
     "clean-webpack-plugin": "0.1.18",
-    "copy-webpack-plugin": "4.4.1",
-    "css-loader": "0.28.9",
+    "copy-webpack-plugin": "4.4.2",
+    "css-loader": "0.28.10",
     "expose-loader": "0.7.4",
     "extract-text-webpack-plugin": "3.0.2",
     "faker": "4.1.0",
-    "file-loader": "1.1.6",
+    "file-loader": "1.1.9",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "2.30.1",
-    "jest": "22.2.2",
+    "jest": "22.4.2",
     "json-server": "0.12.1",
     "node-sass": "4.7.2",
-    "nodemon": "1.14.12",
+    "nodemon": "1.15.1",
     "resolve-url-loader": "2.2.1",
     "sass-loader": "6.0.6",
     "sass-resources-loader": "1.3.2",
     "source-map-loader": "0.2.3",
     "style-loader": "0.20.1",
-    "stylelint": "8.4.0",
-    "stylelint-config-standard": "18.0.0",
-    "stylelint-webpack-plugin": "0.10.1",
+    "stylelint": "9.1.1",
+    "stylelint-config-standard": "18.1.0",
+    "stylelint-webpack-plugin": "0.10.3",
     "sw-precache-webpack-plugin": "0.11.4",
-    "ts-jest": "22.0.4",
+    "ts-jest": "22.4.0",
     "tslint": "5.9.1",
     "tslint-loader": "3.5.3",
-    "typescript": "2.6.2",
+    "typescript": "2.7.2",
     "typings-for-css-modules-loader": "1.7.0",
     "webpack": "3.11.0",
+    "webpack-cli": "2.0.9",
     "webpack-dev-server": "2.11.1",
     "webpack-manifest-plugin": "1.3.2",
-    "webpack-merge": "4.1.1"
+    "webpack-merge": "4.1.2"
   },
   "jest": {
     "transform": {
