--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "copy-webpack-plugin": "4.5.1",
     "css-loader": "0.28.10",
     "expose-loader": "0.7.5",
-    "extract-text-webpack-plugin": "3.0.2",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "faker": "4.1.0",
     "file-loader": "1.1.11",
     "html-loader": "0.5.5",
@@ -92,10 +92,10 @@
     "tslint-loader": "3.6.0",
     "typescript": "2.7.2",
     "typings-for-css-modules-loader": "1.7.0",
-    "webpack": "3.11.0",
+    "webpack": "4.1.1",
     "webpack-cli": "2.0.11",
-    "webpack-dev-server": "2.11.1",
-    "webpack-manifest-plugin": "1.3.2",
+    "webpack-dev-server": "3.1.1",
+    "webpack-manifest-plugin": "2.0.0-rc.2",
     "webpack-merge": "4.1.2"
   },
   "jest": {
