--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "d3": "5.0.0",
     "font-awesome": "4.7.0",
     "jquery": "3.3.1",
-    "popper.js": "1.14.2",
+    "popper.js": "1.14.3",
     "roboto-fontface": "0.9.0"
   },
   "devDependencies": {
@@ -61,7 +61,7 @@
     "@types/jquery": "3.3.1",
     "@types/node": "9.6.2",
     "@types/popper.js": "1.11.0",
-    "awesome-typescript-loader": "4.0.1",
+    "awesome-typescript-loader": "5.0.0",
     "babel-core": "6.26.0",
     "babel-jest": "22.4.3",
     "babel-preset-env": "1.6.1",
@@ -93,9 +93,9 @@
     "typescript": "2.8.1",
     "typings-for-css-modules-loader": "1.7.0",
     "webpack": "4.5.0",
-    "webpack-cli": "2.0.13",
-    "webpack-dev-server": "3.1.1",
-    "webpack-manifest-plugin": "2.0.0-rc.2",
+    "webpack-cli": "2.0.14",
+    "webpack-dev-server": "3.1.3",
+    "webpack-manifest-plugin": "2.0.0",
     "webpack-merge": "4.1.2"
   },
   "jest": {
