--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@types/popper.js": "1.11.0",
     "awesome-typescript-loader": "5.0.0",
     "babel-core": "6.26.3",
-    "babel-jest": "22.4.4",
+    "babel-jest": "23.0.0",
     "babel-preset-env": "1.7.0",
     "clean-webpack-plugin": "0.1.19",
     "copy-webpack-plugin": "4.5.1",
@@ -74,10 +74,10 @@
     "file-loader": "1.1.11",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
-    "jest": "22.4.4",
+    "jest": "23.0.0",
     "json-server": "0.12.2",
     "node-sass": "4.9.0",
-    "nodemon": "1.17.4",
+    "nodemon": "1.17.5",
     "resolve-url-loader": "2.3.0",
     "sass-loader": "7.0.1",
     "sass-resources-loader": "1.3.3",
@@ -92,13 +92,18 @@
     "tslint-loader": "3.6.0",
     "typescript": "2.8.3",
     "typings-for-css-modules-loader": "1.7.0",
-    "webpack": "4.8.3",
-    "webpack-cli": "2.1.3",
+    "webpack": "4.9.1",
+    "webpack-cli": "2.1.4",
     "webpack-dev-server": "3.1.4",
-    "webpack-manifest-plugin": "2.0.2",
+    "webpack-manifest-plugin": "2.0.3",
     "webpack-merge": "4.1.2"
   },
   "jest": {
+    "globals": {
+      "ts-jest": {
+        "useBabelrc": true
+      }
+    },
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
@@ -108,7 +113,8 @@
       "tsx",
       "js",
       "jsx",
-      "json"
+      "json",
+      "node"
     ],
     "moduleNameMapper": {
       "^.+\\.(less|scss)$": "babel-jest"
