--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "postinstall": "node ./mock-server/db/db-creator.js | npm run build",
     "start": "npm run json-server",
     "json-server": "node ./mock-server/server.js",
-    "json-server-watch": "nodemon ./mock-server/server.js",
-    "serve": "webpack-dev-server --d --progress --profile --colors --env.name=dev | npm run json-server",
+    "json-server-watch": "nodemon --ext js --watch ./mock-server ./mock-server/server.js",
+    "serve": "webpack-dev-server --d --progress --profile --colors --env.name=dev | npm run json-server-watch",
     "build": "webpack --progress --profile --colors --env.name=prod",
     "test": "jest src"
   },
@@ -47,21 +47,21 @@
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "bootstrap": "4.1.1",
-    "d3": "5.4.0",
+    "d3": "5.5.0",
     "font-awesome": "4.7.0",
     "jquery": "3.3.1",
     "popper.js": "1.14.3",
     "roboto-fontface": "0.9.0"
   },
   "devDependencies": {
-    "@types/bootstrap": "4.1.0",
+    "@types/bootstrap": "4.1.1",
     "@types/d3": "5.0.0",
     "@types/faker": "4.1.2",
-    "@types/jest": "23.0.2",
-    "@types/jquery": "3.3.2",
-    "@types/node": "10.3.2",
+    "@types/jest": "23.1.1",
+    "@types/jquery": "3.3.3",
+    "@types/node": "10.3.4",
     "@types/popper.js": "1.11.0",
-    "awesome-typescript-loader": "5.0.0",
+    "awesome-typescript-loader": "5.1.1",
     "babel-core": "6.26.3",
     "babel-jest": "23.0.1",
     "babel-preset-env": "1.7.0",
@@ -83,7 +83,7 @@
     "sass-resources-loader": "1.3.3",
     "source-map-loader": "0.2.3",
     "style-loader": "0.21.0",
-    "stylelint": "9.2.1",
+    "stylelint": "9.3.0",
     "stylelint-config-standard": "18.2.0",
     "stylelint-webpack-plugin": "0.10.5",
     "sw-precache-webpack-plugin": "0.11.5",
@@ -93,10 +93,10 @@
     "typescript": "2.9.2",
     "typings-for-css-modules-loader": "1.7.0",
     "webpack": "4.12.0",
-    "webpack-cli": "3.0.4",
+    "webpack-cli": "3.0.8",
     "webpack-dev-server": "3.1.4",
     "webpack-manifest-plugin": "2.0.3",
-    "webpack-merge": "4.1.2"
+    "webpack-merge": "4.1.3"
   },
   "jest": {
     "globals": {
