--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "json-server": "node ./mock-server/server.js",
     "json-server-watch": "nodemon --ext js --watch ./mock-server ./mock-server/server.js",
     "serve": "webpack-dev-server --d --progress --profile --colors --env.name=dev | npm run json-server-watch",
-    "build": "webpack --progress --profile --json --colors --env.name=prod",
+    "build": "webpack --progress --profile --colors --env.name=prod",
     "test": "jest src",
     "bundle-analyzer": "webpack-bundle-analyzer ./dist/stats.json"
   },
@@ -47,7 +47,7 @@
   ],
   "dependencies": {
     "babel-polyfill": "6.26.0",
-    "bootstrap": "4.1.1",
+    "bootstrap": "4.1.3",
     "d3": "5.5.0",
     "font-awesome": "4.7.0",
     "jquery": "3.3.1",
@@ -58,9 +58,9 @@
     "@types/bootstrap": "4.1.2",
     "@types/d3": "5.0.0",
     "@types/faker": "4.1.2",
-    "@types/jest": "23.1.5",
-    "@types/jquery": "3.3.4",
-    "@types/node": "10.5.2",
+    "@types/jest": "23.3.1",
+    "@types/jquery": "3.3.5",
+    "@types/node": "10.5.5",
     "@types/popper.js": "1.11.0",
     "awesome-typescript-loader": "5.2.0",
     "babel-core": "6.26.3",
@@ -85,19 +85,19 @@
     "sass-resources-loader": "1.3.3",
     "source-map-loader": "0.2.3",
     "style-loader": "0.21.0",
-    "stylelint": "9.3.0",
+    "stylelint": "9.4.0",
     "stylelint-config-standard": "18.2.0",
     "stylelint-webpack-plugin": "0.10.5",
     "sw-precache-webpack-plugin": "0.11.5",
-    "ts-jest": "23.0.0",
-    "tslint": "5.10.0",
+    "ts-jest": "23.0.1",
+    "tslint": "5.11.0",
     "tslint-loader": "3.6.0",
-    "typescript": "2.9.2",
+    "typescript": "3.0.1",
     "typings-for-css-modules-loader": "1.7.0",
     "webpack": "4.16.0",
     "webpack-bundle-analyzer": "2.13.1",
-    "webpack-cli": "3.0.8",
-    "webpack-dev-server": "3.1.4",
+    "webpack-cli": "3.1.0",
+    "webpack-dev-server": "3.1.5",
     "webpack-manifest-plugin": "2.0.3",
     "webpack-merge": "4.1.3"
   }
