--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://github.com/mauriziocescon",
   "private": false,
   "engines": {
-    "node": "=10.14.1",
+    "node": "=10.15.3",
     "npm": "=6.4.1"
   },
   "scripts": {
@@ -47,58 +47,59 @@
   ],
   "dependencies": {
     "babel-polyfill": "6.26.0",
-    "bootstrap": "4.1.3",
-    "d3": "5.7.0",
+    "bootstrap": "4.3.1",
+    "d3": "5.9.2",
     "font-awesome": "4.7.0",
     "jquery": "3.3.1",
-    "popper.js": "1.14.6",
+    "popper.js": "1.14.7",
     "roboto-fontface": "0.10.0"
   },
   "devDependencies": {
-    "@types/bootstrap": "4.1.2",
-    "@types/d3": "5.0.1",
-    "@types/faker": "4.1.4",
-    "@types/jest": "23.3.10",
-    "@types/jquery": "3.3.22",
-    "@types/node": "10.12.11",
+    "@types/bootstrap": "4.3.0",
+    "@types/d3": "5.7.1",
+    "@types/faker": "4.1.5",
+    "@types/jest": "24.0.11",
+    "@types/jquery": "3.3.29",
+    "@types/node": "11.11.3",
     "@types/popper.js": "1.11.0",
+    "@types/webpack": "4.4.26",
     "awesome-typescript-loader": "5.2.1",
     "babel-core": "6.26.3",
-    "babel-jest": "23.6.0",
+    "babel-jest": "24.5.0",
     "babel-preset-env": "1.7.0",
-    "clean-webpack-plugin": "1.0.0",
-    "copy-webpack-plugin": "4.6.0",
+    "clean-webpack-plugin": "2.0.1",
+    "copy-webpack-plugin": "5.0.1",
     "cross-env": "5.2.0",
     "css-loader": "1.0.1",
     "expose-loader": "0.7.5",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "faker": "4.1.0",
-    "file-loader": "2.0.0",
+    "file-loader": "3.0.1",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
-    "jest": "23.6.0",
-    "json-server": "0.14.0",
-    "node-sass": "4.10.0",
-    "nodemon": "1.18.7",
-    "resolve-url-loader": "3.0.0",
+    "jest": "24.5.0",
+    "json-server": "0.14.2",
+    "node-sass": "4.11.0",
+    "nodemon": "1.18.10",
+    "resolve-url-loader": "3.0.1",
     "sass-loader": "7.1.0",
     "sass-resources-loader": "2.0.0",
     "source-map-loader": "0.2.4",
     "style-loader": "0.23.1",
-    "stylelint": "9.9.0",
+    "stylelint": "9.10.1",
     "stylelint-config-standard": "18.2.0",
     "stylelint-webpack-plugin": "0.10.5",
     "sw-precache-webpack-plugin": "0.11.5",
-    "ts-jest": "23.10.5",
-    "tslint": "5.11.0",
+    "ts-jest": "24.0.0",
+    "tslint": "5.14.0",
     "tslint-loader": "3.5.4",
-    "typescript": "3.2.1",
+    "typescript": "3.3.3",
     "typings-for-css-modules-loader": "1.7.0",
-    "webpack": "4.26.1",
-    "webpack-bundle-analyzer": "3.0.3",
-    "webpack-cli": "3.1.2",
-    "webpack-dev-server": "3.1.10",
+    "webpack": "4.29.6",
+    "webpack-bundle-analyzer": "3.1.0",
+    "webpack-cli": "3.3.0",
+    "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
-    "webpack-merge": "4.1.4"
+    "webpack-merge": "4.2.1"
   }
 }
