--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "homepage": "https://github.com/mauriziocescon",
   "private": false,
   "engines": {
-    "node": "^10.16.3",
-    "npm": "^6.9.0"
+    "node": ">=10.16.3",
+    "npm": ">=6.9.0"
   },
   "scripts": {
     "postinstall": "npm run build",
