--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "start": "cross-env NODE_ENV=production npm run json-server",
     "json-server": "node ./mock-server/server.js",
     "json-server-watch": "nodemon --ext js --watch ./mock-server ./mock-server/server.js",
-    "serve": "webpack-dev-server --d --progress --profile --colors --env.name=dev | npm run json-server-watch",
-    "build": "webpack --progress --profile --colors --env.name=prod",
+    "serve": "webpack-dev-server --d --progress --profile --color --env name=dev | npm run json-server-watch",
+    "build": "webpack --progress --profile --color --env name=prod",
     "test": "jest src",
     "bundle-analyzer": "webpack-bundle-analyzer ./dist/stats.json"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mauriziocescon/react-app"
+    "url": "https://github.com/mauriziocescon/d3-app"
   },
   "keywords": [
     "bootstrap",
@@ -47,58 +47,55 @@
   ],
   "dependencies": {
     "babel-polyfill": "6.26.0",
-    "bootstrap": "4.4.1",
-    "d3": "5.15.0",
+    "bootstrap": "4.5.3",
+    "d3": "6.2.0",
     "font-awesome": "4.7.0",
-    "jquery": "3.4.1",
+    "jquery": "3.5.1",
     "popper.js": "1.16.1",
     "roboto-fontface": "0.10.0"
   },
   "devDependencies": {
-    "@types/bootstrap": "4.3.1",
-    "@types/d3": "5.7.2",
-    "@types/faker": "4.1.10",
-    "@types/jest": "24.9.1",
-    "@types/jquery": "3.3.33",
-    "@types/node": "12.7.3",
-    "@types/webpack": "4.41.6",
+    "@types/bootstrap": "5.0.0",
+    "@types/d3": "5.16.3",
+    "@types/faker": "5.1.2",
+    "@types/jest": "26.0.15",
+    "@types/jquery": "3.5.3",
+    "@types/node": "14.14.0",
+    "@types/webpack": "4.41.23",
     "awesome-typescript-loader": "5.2.1",
     "babel-core": "6.26.3",
-    "babel-jest": "24.9.0",
+    "babel-jest": "26.6.0",
     "babel-preset-env": "1.7.0",
     "clean-webpack-plugin": "3.0.0",
-    "copy-webpack-plugin": "5.1.1",
-    "cross-env": "7.0.0",
-    "css-loader": "1.0.1",
-    "expose-loader": "0.7.5",
-    "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "faker": "4.1.0",
-    "file-loader": "5.1.0",
-    "html-loader": "0.5.5",
-    "html-webpack-plugin": "3.2.0",
-    "jest": "24.9.0",
-    "json-server": "0.16.1",
-    "node-sass": "4.13.1",
-    "nodemon": "2.0.2",
-    "resolve-url-loader": "3.1.1",
-    "sass-loader": "8.0.2",
-    "sass-resources-loader": "2.0.1",
-    "source-map-loader": "0.2.4",
-    "style-loader": "1.1.3",
-    "stylelint": "13.2.0",
+    "copy-webpack-plugin": "6.2.1",
+    "cross-env": "7.0.2",
+    "css-loader": "5.0.0",
+    "expose-loader": "1.0.1",
+    "faker": "5.1.0",
+    "file-loader": "6.1.1",
+    "html-loader": "1.3.2",
+    "html-webpack-plugin": "4.5.0",
+    "jest": "26.6.0",
+    "json-server": "0.16.2",
+    "mini-css-extract-plugin": "1.1.1",
+    "node-sass": "4.14.1",
+    "nodemon": "2.0.6",
+    "resolve-url-loader": "3.1.2",
+    "sass-loader": "10.0.3",
+    "sass-resources-loader": "2.1.1",
+    "source-map-loader": "1.1.1",
+    "style-loader": "2.0.0",
+    "stylelint": "13.7.2",
     "stylelint-config-standard": "20.0.0",
-    "stylelint-webpack-plugin": "1.2.3",
-    "sw-precache-webpack-plugin": "1.0.0",
-    "ts-jest": "24.3.0",
-    "tslint": "6.0.0",
+    "stylelint-webpack-plugin": "2.1.1",
+    "ts-jest": "26.4.1",
+    "tslint": "6.1.3",
     "tslint-loader": "3.5.4",
-    "typescript": "3.8.2",
-    "typings-for-css-modules-loader": "1.7.0",
-    "webpack": "4.41.6",
-    "webpack-bundle-analyzer": "3.6.0",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.10.3",
-    "webpack-manifest-plugin": "2.2.0",
-    "webpack-merge": "4.2.2"
+    "typescript": "4.0.3",
+    "webpack": "5.1.3",
+    "webpack-bundle-analyzer": "3.9.0",
+    "webpack-cli": "4.1.0",
+    "webpack-dev-server": "3.11.0",
+    "webpack-merge": "5.2.0"
   }
 }
