--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     }
   ],
   "dependencies": {
-    "babel-polyfill": "6.26.0",
+    "@babel/polyfill": "7.12.1",
     "bootstrap": "4.5.3",
     "d3": "6.2.0",
     "font-awesome": "4.7.0",
@@ -55,6 +55,8 @@
     "roboto-fontface": "0.10.0"
   },
   "devDependencies": {
+    "@babel/core": "7.12.3",
+    "@babel/preset-env": "7.12.1",
     "@types/bootstrap": "5.0.0",
     "@types/d3": "5.16.3",
     "@types/faker": "5.1.2",
@@ -62,10 +64,8 @@
     "@types/jquery": "3.5.3",
     "@types/node": "14.14.0",
     "@types/webpack": "4.41.23",
-    "awesome-typescript-loader": "5.2.1",
-    "babel-core": "6.26.3",
     "babel-jest": "26.6.0",
-    "babel-preset-env": "1.7.0",
+    "babel-loader": "8.1.0",
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "6.2.1",
     "cross-env": "7.0.2",
@@ -76,6 +76,7 @@
     "html-loader": "1.3.2",
     "html-webpack-plugin": "4.5.0",
     "jest": "26.6.0",
+    "jest-css-modules": "2.1.0",
     "json-server": "0.16.2",
     "mini-css-extract-plugin": "1.1.1",
     "node-sass": "4.14.1",
@@ -89,6 +90,7 @@
     "stylelint-config-standard": "20.0.0",
     "stylelint-webpack-plugin": "2.1.1",
     "ts-jest": "26.4.1",
+    "ts-loader": "8.0.6",
     "tslint": "6.1.3",
     "tslint-loader": "3.5.4",
     "typescript": "4.0.3",
