--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "cross-env NODE_ENV=production npm run json-server",
     "json-server": "node ./mock-server/server.js",
     "json-server-watch": "nodemon --ext js --watch ./mock-server ./mock-server/server.js",
-    "serve": "webpack-dev-server --d --progress --profile --color --env name=dev | npm run json-server-watch",
+    "serve": "webpack serve --progress --color --env name=dev --config webpack.config.js | npm run json-server-watch",
     "build": "webpack --progress --profile --color --env name=prod",
     "test": "jest src",
     "bundle-analyzer": "webpack-bundle-analyzer ./dist/stats.json"
@@ -58,46 +58,46 @@
     "@babel/core": "7.12.3",
     "@babel/preset-env": "7.12.1",
     "@types/bootstrap": "5.0.0",
-    "@types/d3": "5.16.3",
-    "@types/faker": "5.1.3",
+    "@types/d3": "6.1.0",
+    "@types/faker": "5.1.4",
     "@types/jest": "26.0.15",
     "@types/jquery": "3.5.4",
-    "@types/node": "14.14.6",
-    "@types/webpack": "4.41.24",
-    "babel-jest": "26.6.1",
-    "babel-loader": "8.1.0",
+    "@types/node": "14.14.7",
+    "@types/webpack": "4.41.25",
+    "babel-jest": "26.6.3",
+    "babel-loader": "8.2.1",
     "clean-webpack-plugin": "3.0.0",
-    "copy-webpack-plugin": "6.2.1",
+    "copy-webpack-plugin": "6.3.1",
     "cross-env": "7.0.2",
-    "css-loader": "5.0.0",
+    "css-loader": "5.0.1",
     "expose-loader": "1.0.1",
     "faker": "5.1.0",
     "file-loader": "6.2.0",
     "html-loader": "1.3.2",
     "html-webpack-plugin": "4.5.0",
-    "jest": "26.6.1",
+    "jest": "26.6.3",
     "jest-css-modules": "2.1.0",
     "json-server": "0.16.2",
-    "mini-css-extract-plugin": "1.2.1",
-    "node-sass": "4.14.1",
+    "mini-css-extract-plugin": "1.3.1",
+    "node-sass": "5.0.0",
     "nodemon": "2.0.6",
     "resolve-url-loader": "3.1.2",
-    "sass-loader": "10.0.4",
+    "sass-loader": "10.1.0",
     "sass-resources-loader": "2.1.1",
     "source-map-loader": "1.1.2",
     "style-loader": "2.0.0",
     "stylelint": "13.7.2",
     "stylelint-config-standard": "20.0.0",
     "stylelint-webpack-plugin": "2.1.1",
-    "ts-jest": "26.4.3",
-    "ts-loader": "8.0.7",
+    "ts-jest": "26.4.4",
+    "ts-loader": "8.0.11",
     "tslint": "6.1.3",
     "tslint-loader": "3.5.4",
     "typescript": "4.0.5",
-    "webpack": "5.3.2",
-    "webpack-bundle-analyzer": "3.9.0",
-    "webpack-cli": "4.1.0",
+    "webpack": "5.4.0",
+    "webpack-bundle-analyzer": "4.1.0",
+    "webpack-cli": "4.2.0",
     "webpack-dev-server": "3.11.0",
-    "webpack-merge": "5.2.0"
+    "webpack-merge": "5.4.0"
   }
 }
