--- a/package.json
+++ b/package.json
@@ -47,57 +47,57 @@
   ],
   "dependencies": {
     "@babel/polyfill": "7.12.1",
-    "bootstrap": "4.6.0",
-    "d3": "6.6.2",
+    "@popperjs/core": "2.9.2",
+    "bootstrap": "5.0.1",
+    "d3": "7.0.0",
     "font-awesome": "4.7.0",
     "jquery": "3.6.0",
-    "popper.js": "1.16.1",
     "roboto-fontface": "0.10.0"
   },
   "devDependencies": {
-    "@babel/core": "7.13.14",
-    "@babel/preset-env": "7.13.12",
-    "@types/bootstrap": "5.0.12",
-    "@types/d3": "6.3.0",
-    "@types/faker": "5.5.1",
-    "@types/jest": "26.0.22",
+    "@babel/core": "7.14.6",
+    "@babel/preset-env": "7.14.5",
+    "@types/bootstrap": "5.0.16",
+    "@types/d3": "6.7.0",
+    "@types/faker": "5.5.6",
+    "@types/jest": "26.0.23",
     "@types/jquery": "3.5.5",
-    "@types/node": "14.14.37",
+    "@types/node": "15.12.2",
     "@types/webpack": "5.28.0",
-    "babel-jest": "26.6.3",
+    "babel-jest": "27.0.2",
     "babel-loader": "8.2.2",
     "clean-webpack-plugin": "3.0.0",
-    "copy-webpack-plugin": "8.1.1",
+    "copy-webpack-plugin": "9.0.0",
     "cross-env": "7.0.3",
-    "css-loader": "5.2.0",
-    "expose-loader": "2.0.0",
-    "faker": "5.5.2",
+    "css-loader": "5.2.6",
+    "expose-loader": "3.0.0",
+    "faker": "5.5.3",
     "file-loader": "6.2.0",
     "html-loader": "2.1.2",
     "html-webpack-plugin": "5.3.1",
-    "jest": "26.6.3",
+    "jest": "27.0.4",
     "jest-css-modules": "2.1.0",
     "json-server": "0.16.3",
-    "mini-css-extract-plugin": "1.4.1",
-    "node-sass": "5.0.0",
+    "mini-css-extract-plugin": "1.6.0",
+    "node-sass": "6.0.0",
     "nodemon": "2.0.7",
-    "resolve-url-loader": "3.1.2",
-    "sass-loader": "11.0.1",
-    "sass-resources-loader": "2.1.1",
-    "source-map-loader": "2.0.1",
+    "resolve-url-loader": "4.0.0",
+    "sass-loader": "12.1.0",
+    "sass-resources-loader": "2.2.2",
+    "source-map-loader": "3.0.0",
     "style-loader": "2.0.0",
-    "stylelint": "13.12.0",
-    "stylelint-config-standard": "21.0.0",
-    "stylelint-webpack-plugin": "2.1.1",
-    "ts-jest": "26.5.4",
-    "ts-loader": "8.1.0",
+    "stylelint": "13.13.1",
+    "stylelint-config-standard": "22.0.0",
+    "stylelint-webpack-plugin": "2.2.0",
+    "ts-jest": "27.0.3",
+    "ts-loader": "9.2.3",
     "tslint": "6.1.3",
     "tslint-loader": "3.5.4",
-    "typescript": "4.2.4",
-    "webpack": "5.31.0",
-    "webpack-bundle-analyzer": "4.4.0",
-    "webpack-cli": "4.6.0",
+    "typescript": "4.3.3",
+    "webpack": "5.39.1",
+    "webpack-bundle-analyzer": "4.4.2",
+    "webpack-cli": "4.7.2",
     "webpack-dev-server": "3.11.2",
-    "webpack-merge": "5.7.3"
+    "webpack-merge": "5.8.0"
   }
 }
