--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
   ],
   "dependencies": {
     "@babel/polyfill": "7.12.1",
+    "@fortawesome/fontawesome-free": "5.15.4",
     "@popperjs/core": "2.11.2",
     "bootstrap": "5.1.3",
     "d3": "7.3.0",
-    "font-awesome": "4.7.0",
     "jquery": "3.6.0",
     "roboto-fontface": "0.10.0"
   },
