--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
     "jest-css-modules": "^2.1.0",
+    "jest-environment-jsdom": "^29.7.0",
     "json-server": "^0.17.4",
     "mini-css-extract-plugin": "^2.7.6",
     "nodemon": "^3.0.1",
