--- a/package.json
+++ b/package.json
@@ -64,12 +64,16 @@
     "@types/jquery": "^3.5.27",
     "@types/node": "^20.9.0",
     "@types/webpack": "^5.28.5",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
+    "eslint": "^8.53.0",
+    "eslint-webpack-plugin": "^4.0.1",
     "expose-loader": "^4.1.0",
     "faker": "^5.5.3",
     "file-loader": "^6.2.0",
@@ -92,8 +96,6 @@
     "stylelint-webpack-plugin": "^4.1.1",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.0",
-    "tslint": "^6.1.3",
-    "tslint-loader": "^3.5.4",
     "typescript": "^5.2.2",
     "webpack": "^5.89.0",
     "webpack-bundle-analyzer": "^4.9.1",
