chore: minor changes

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Starter Kit for a d3 application",
   "author": "Maurizio Cescon <maurizio.cescon@gmail.com>",
-  "homepage": "https://github.com/mauriziocescon",
+  "homepage": "https://be.linkedin.com/in/mauriziocescon",
   "private": false,
   "engines": {
     "node": ">=20.9.0",
