--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
     }
   ],
   "dependencies": {
-    "@babel/polyfill": "7.12.1",
-    "@fortawesome/fontawesome-free": "6.4.2",
-    "@popperjs/core": "2.11.8",
-    "bootstrap": "5.3.2",
-    "d3": "7.8.5",
-    "jquery": "3.7.1",
-    "roboto-fontface": "0.10.0"
+    "@babel/polyfill": "^7.12.1",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
+    "d3": "^7.8.5",
+    "jquery": "^3.7.1",
+    "roboto-fontface": "^0.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
